--- a/swap/package.json
+++ b/swap/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@project-serum/serum": "^0.13.65",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.95.4",
     "dotenv": "^16.4.5"
