--- a/swapfrontend/package.json
+++ b/swapfrontend/package.json
@@ -19,7 +19,8 @@
     "@solana/web3.js": "^1.95.4",
     "buffer": "^6.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
