--- a/swapfrontend/package.json
+++ b/swapfrontend/package.json
@@ -17,6 +17,7 @@
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.95.4",
+    "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
